# event-manager-sgx

./: Cargo.toml  Dockerfile  Makefile  README.md
.github/workflows/: ci.yml
src/: connection.rs  handlers.rs  helpers.rs  main.rs  output.rs  periodic.rs  sm_loaders.rs  time.rs
