[package]
name = "event_manager"
version = "0.1.0"
authors = ["Gianluca Scopelliti <gianlu.1033@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reactive_net = { git = "https://github.com/gianlu33/rust-sgx-libs.git", tag="fosdem-21" }
lazy_static = "1.4.0"
log = "0.4.8"
simple_logger = "1.5.0"
ctrlc = "3.1.4"
tempfile = "3.1.0"
threadpool = "1.8.1"
